# sicilian

./: .gitignore  CMakeLists.txt  README.md  autotrader.cc  autotrader.h  autotrader.json  autotrader1.cc  autotrader1.json  autotrader2.cc  autotrader2.h  autotrader2.json  autotrader3.cc  autotrader3.h  autotrader3.json  autotrader3_2.cc  autotrader3_2.json  autotrader3_3.cc  autotrader3_3.h  autotrader3_3.json  autotrader3_4.cc  autotrader3_4.h  autotrader3_4.json  autotrader3_6.cc  autotrader4.cc  autotrader4.h  autotrader4.json  autotrader4a.cc  exchange.json  main1.cc  main2.cc  main3.cc  main4.cc
